<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_nine_puzzle"
    android:padding="@dimen/root_padding">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGiveUp"
        android:background="@drawable/shape_white_button"
        android:layout_width="0dp"
        android:text="@string/give_up"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold"
        android:layout_height="@dimen/btn_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="4dp"
        android:background="@drawable/shape_white_game_shape"
        android:maxWidth="@dimen/game_field_max"
        android:maxHeight="@dimen/game_field_max"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/tvPuzzle0"
                    android:tag="0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:background="@drawable/shape_white_game_item"
                    tools:text="1"
                    android:textSize="36sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/tvPuzzle1"
                    android:tag="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_white_game_item"
                    tools:text="2"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/tvPuzzle2"
                    android:tag="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_white_game_item"
                    tools:text="3"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/tvPuzzle3"
                    android:tag="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_white_game_item"
                    tools:text="4"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/tvPuzzle4"
                    android:tag="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_white_game_item"
                    tools:text="5"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/tvPuzzle5"
                    android:tag="5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_white_game_item"
                    tools:text="6"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/tvPuzzle6"
                    android:tag="6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_white_game_item"
                    tools:text="7"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/tvPuzzle7"
                    android:tag="7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_white_game_item"
                    tools:text="8"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/tvPuzzle8"
                    android:tag="8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/shape_white_game_item"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="36sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvTimerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.3" />


    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/zero_timer"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="@+id/tvTimerTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTimerTitle"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/tvStepsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/steps"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.3" />


    <TextView
        android:id="@+id/tvSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="@+id/tvStepsTitle"
        app:layout_constraintStart_toStartOf="@+id/tvStepsTitle"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="16dp"
        android:text="@string/dalej"
        android:background="@drawable/shape_white_green"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tglStar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/tglSound"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/tglStar"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tglSound"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvGoodjob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_job"
        android:textStyle="bold"
        android:textSize="26sp"
        tools:visibility="visible"
        android:visibility="invisible"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGiveUp" />


</androidx.constraintlayout.widget.ConstraintLayout>